--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -46,7 +46,8 @@ div { text-align:center; }
 	<div class="block" id="center">
 		<div style="display:table-cell; vertical-align:middle; text-align:center;">
                                 <span id="countdown" style="text-align:center;">
-                                <span class="bloc" id="days"></span>, <span class="bloc" id="hours"></span>,<span class="bloc" id="minutes"></span> et <span class="bloc" id="seconds"></span> avant mon anniversaire !
+                                	<span class="bloc" id="days"></span>, <span class="bloc" id="hours"></span>,<span class="bloc" id="minutes"></span> et <span class="bloc" id="seconds"></span> avant mon anniversaire !
+                                </span>
                  </div>
 	</div>
             <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
