--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -35,17 +35,14 @@ body {
 	display:table;
 	font-size:65px;
 	padding:15px;
+	text-align:center;
 }
-div { text-align:center; }
-
-
-.cache{ background-color:#000; position:absolute; cursor:pointer; width:100%; }
 </style>
 </head>
 <body>
-		<div style="display:table-cell; vertical-align:middle; text-align:center;">
-                                <span id="countdown" style="text-align:center;">
-                                	<span class="bloc" id="days"></span>, <span class="bloc" id="hours"></span>,<span class="bloc" id="minutes"></span> et <span class="bloc" id="seconds"></span> avant mon anniversaire !
+		<div style="display:table-cell; vertical-align:middle;">
+                                <span id="countdown">
+                                	<span id="days"></span>, <span id="hours"></span>,<span id="minutes"></span> et <span id="seconds"></span> avant mon anniversaire !
                                 </span>
                  </div>
             <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
