--- a/demo/greeting-birth/index.html
+++ b/demo/greeting-birth/index.html
@@ -20,7 +20,7 @@
     </header>
 
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script type="text/javascript" src="claim.js"</script>
+<script type="text/javascript" src="claim.js"></script>
 <script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -29,6 +29,7 @@
 
   ga('create', 'UA-49736522-1', 'cedced19.github.io');
   ga('send', 'pageview');
+
 </script>
 </body>
 </html>
