--- a/demo/greeting-birth/index.html
+++ b/demo/greeting-birth/index.html
@@ -7,7 +7,7 @@
   <link href='//fonts.googleapis.com/css?family=Roboto:400,100,400italic,700italic,700' rel='stylesheet' type='text/css'>
   <style>*,:after,:before{margin:0;padding:0;position:relative;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}button,input,select,textarea{-webkit-appearance:none;-moz-appearance:none;appearance:none}.alpha,h1{margin-bottom:1.5rem;font-size:3rem;font-weight:100;line-height:1;letter-spacing:-.05em}.beta,h2{margin-bottom:.75rem;font-weight:400;font-size:1.5rem;line-height:1}@media (min-width:650px){.mega{font-size:6rem;line-height:1}}.meta,.subhead{color:#7b8993}.promo{text-align:center}.wrap{max-width:38rem;margin:0 auto}.island{padding:1.5rem}.isle{padding:.75rem}.spit{padding:.375rem}html{font:100%/1.5 Roboto,Verdana,sans-serif;color:red;background-color:#fff;-webkit-font-smoothing:antialiased;width:100%;overflow:hidden-x;text-align:center}@media (min-width:650px){html{height:100%}html:before{content:'';display:inline-block;height:100%;vertical-align:middle;margin-right:-.25em}body{display:inline-block;vertical-align:middle;max-width:38rem}}#claim .off{visibility:hidden}#claim{font-size:2rem}</style>
   <link rel="stylesheet"  href="animate.min.css" >
-  <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 
 <body class="animated fadeInDown">
