--- a/demo/greeting-birth/index.html
+++ b/demo/greeting-birth/index.html
@@ -10,7 +10,7 @@
   <link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 
-<body class="animated fadeInDown">
+<body class="animated rollIn">
     <header class="island">
         <div class="wrap">
             <h1 class="mega title" >Hello <br> Anaé !</h1>
